--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,11 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer components {
+    .icon {
+        @apply hidden 
+        hover:bg-gray-100
+        cursor-pointer
+        xl:inline-flex p-2 h-10 w-10 bg-gray-100 rounded-full text-gray-700
+    }
 }
